# qiqe

./: .gitignore  README.md  db.sql  default.nix  flake.nix
doc/: README.md
doc/examples/: factorial.qq  fizzbuzz.qq  quicksort.qq  sierpinski_triangle.qq  stairs.qq  triangle2.qq
nix/: .env.nix  createdb.nix  gen-cargo.nix  ngrok.nix  postgres.nix  postgrest.nix
qiqe/doc/: README.md
qiqe/doc/examples/: experimental-list.qq  fibonacci.qq  fizzbuzz.qq  sierpinski_triangle.qq  triangle.qq  triangle2.qq
qiqe/doc/notes/: recursive-functions.md
service/Interpreter/: Interpreter.cabal  default.nix  stack.yaml
service/Interpreter/nix/: stack-shell.nix
service/Interpreter/src/: Main.hs
service/Interpreter/src/Interpreter/: Compiler.hs  Evaluator.hs  Lexer.hs  Parser.hs  Token.hs
service/auth/: default.nix  package-lock.json  package.json
service/auth/src/: error-page.tsx  index.css  index.tsx
service/auth/src/api/: run-code.ts
service/auth/src/components/: markdown.tsx  navbar.tsx  qiqeIcon.tsx
service/auth/src/hooks/: useConsole.ts  useShell.ts
service/auth/src/lib/: ace-qiqe-mode.js  code-eval.ts
service/auth/src/pages/: docs.tsx  home.tsx  login.tsx  playground.tsx  root.tsx
service/protos/: interpreter.proto
service/proxy/: Cargo.nix  Cargo.toml  default.nix
service/proxy/src/: build.rs  interpreter.rs  main.rs
site/client/auth/: default.nix  package-lock.json  package.json
site/client/auth/auth/: package-lock.json  package.json
site/client/auth/nix/: node-packages.nix
site/client/auth/src/: index.css  index.tsx
site/client/auth/src/api/: run-code.ts
site/client/auth/src/components/: markdown.tsx  navbar.tsx
site/client/auth/src/lib/: code-eval.ts
site/client/auth/src/pages/: docs.tsx  home.tsx  playground.tsx  root.tsx  signup.tsx
site/server/Interpreter/: Interpreter.cabal  Interpreter.proto  default.nix  stack.yaml
site/server/Interpreter/src/: Main.hs  Schema.hs
site/server/Interpreter/src/Interpreter/: Compiler.hs  Evaluator.hs  Lexer.hs  Parser.hs  Token.hs
site/server/auth/: .gitignore  README.md  default.nix  manage.py  pyproject.toml
site/server/auth/auth_server/: asgi.py  settings.py  urls.py  wsgi.py
site/server/auth/code_runner/: serializers.py  urls.py  views.py
site/server/auth/protoc/: interpreter_pb2.py  interpreter_pb2.pyi  interpreter_pb2_grpc.py
site/server/interpreter/: LICENSE  default.nix  interpreter.cabal
site/server/proxy/: Cargo.nix  default.nix
site/server/proxy/src/: main.rs
