[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxy"
path = "src/main.rs"

[[bin]]
name = "build-proto"
path = "src/build.rs"

[dependencies]
tonic = "0.11.0"
prost = "0.12"
parking_lot = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["macros"] }
serde_json = "1.0.116"
actix-web = "4"
actix-cors = "0.6.0"
log = "0.4.21"
tonic-build = "0.11.0"
prost-build = "0.12.6"
chrono = "0.4.38"
actix-files = "0.6.6"
awc = "3.5.0"
openssl = "0.10.64"
env_logger = "0.11.3"
